# reflexa-camera-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controllers/: CameraService.cpp  CameraService.h  ImageFiltersController.cpp  ImageFiltersController.h  ImageTextureController.cpp  ImageTextureController.h
models/: MediaListModel.cpp  MediaListModel.h
ui/: CameraBehaviorButton.qml  CameraControlButton.qml  ControlsView.qml  CustomComboBox.qml  CustomSlider.qml  FiltersView.qml  GalleryView.qml  GridLines.qml  Main.qml  RecordTimer.qml  SettingsView.qml  TitleBar.qml
utilities/: CameraControls.cpp  CameraControls.h  CameraImageProvider.cpp  CameraImageProvider.h  CameraWorker.cpp  CameraWorker.h  CapturedImageProvider.cpp  CapturedImageProvider.h  ClipboardHelper.cpp  ClipboardHelper.h  FaceDetector.cpp  FaceDetector.h  QRCodeDetector.cpp  QRCodeDetector.h  QRDetector.cpp  QRDetector.h
